--- a/app/src/main/res/layout/activity_find_id.xml
+++ b/app/src/main/res/layout/activity_find_id.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FindIdActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".FindIdActivity"
+    android:orientation="vertical"
+    android:gravity="center">
+    <TextView
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/phone_number"
+        android:textSize="40sp"
+        android:textColor="@color/chord_dark"
+        android:fontFamily="@font/elicedigitalbaeum_regular"/>
+    <EditText
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/login_edittext"
+        android:id="@+id/phone_number"
+        android:hint="@string/phone_number"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:background="@drawable/login_button"
+        android:text="@string/find_id"
+        android:id="@+id/find_id_button"/>
+</LinearLayout>
